--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     <script>
         const questions = [
-            { question: "She was wearing <u>really</u> beautiful earrings.", options: ["Adjective", "Noun", "Adverb", "Preposition"], answer: 0 },
+            { question: "She was wearing really <u>beautiful</u> earrings.", options: ["Adjective", "Noun", "Adverb", "Preposition"], answer: 0 },
             { question: "<u>Wow</u>, you have got a great score.", options: ["Conjunction", "Pronoun", "Interjection", "Noun"], answer: 2 },
             { question: "The baby crawled <u>under</u> the bed.", options: ["Preposition", "Conjunction", "Adverb", "Adjective"], answer: 0 },
             { question: "She <u>quickly</u> packed her bag and left.", options: ["Noun", "Adjective", "Verb", "Adverb"], answer: 3 },
