--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -107,6 +108,16 @@
             { question: "He thinks we will arrive at <u>roughly</u> 5pm.", options: ["Pronoun", "Preposition", "Conjunction", "Verb"], answer: 1 },
             { question: "The music is <u>very</u> loud.", options: ["Adjective", "Interjection", "Preposition", "Noun"], answer: 0 },
             { question: "He goes to Spain often not only for the sun but also for the <u>food</u>.", options: ["Conjunction", "Adverb", "Preposition", "Noun"], answer: 2 },
+            { question: "Because the floor had just been mopped, Allan and Elaine slipped and fell as they ran to the meeting.", options: ["Preposition", "Conjunction", "Noun", "Adjective"], answer: 1 },
+            { question: "I visited the Golden Temple in Amritsar, India in the vacation.", options: ["Noun", "Interjection", "Pronoun", "Conjunction"], answer: 0 },
+            { question: "Her expensive brown English antique new watch stopped working.", options: ["Conjunction", "Adverb", "Pronoun", "Noun"], answer: 3 },
+            { question: "My mother is cooking dinner for us.", options: ["Preposition", "Verb", "Noun", "Adverb"], answer: 1 },
+            { question: "<u>Oh</u>, I didn’t see you there!", options: ["Preposition", "Conjunction", "Noun", "Interjection"], answer: 3 },
+            { question: "He's the richest man in the world.", options: ["Adjective", "Verb", "Conjunction", "Preposition"], answer: 0 },
+            { question: "Although we were tired, we stayed up late.", options: ["Preposition", "Conjunction", "Noun", "Interjection"], answer: 1 },
+            { question: "Poverty is a global problem.", options: ["Adjective", "Interjection", "Preposition", "Noun"], answer: 3 },
+            { question: "He has many influential friends.", options: ["Conjunction", "Verb", "Preposition", "Noun"], answer: 3 },
+            { question: "Hari is the most intelligent boy in the class.", options: ["Pronoun", "Preposition", "Conjunction", "Adjective"], answer: 3 }
         ];
 
         let currentQuestionIndex = 0;
@@ -157,3 +168,4 @@
     </script>
 </body>
 </html>
+
