--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
         <h1>Parts of Speech</h1>
     </header>
     <div class="container">
+        <button onclick="playSound('correct.mp3')">Play Correct Sound</button>
+        <button onclick="playSound('wrong.mp3')">Play Wrong Sound</button>
         <button id="start-button">Start Quiz</button>
         <div id="quiz" style="display: none;">
             <div class="question-box">
@@ -160,6 +162,10 @@
                 button.classList.add('wrong');
             }
         }
+
+             function playSound(file) {
+         const sound = new Audio(file);
+         sound.play().catch(err => console.error(`Error playing sound: ${err}`));  }
     </script>
 </body>
 </html>
