--- a/index.html
+++ b/index.html
@@ -78,22 +78,25 @@
             font-size: 18px;
             cursor: pointer;
         }
+        #result {
+            font-size: 20px;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
     <header>
         <img src="logo.png" alt="Logo">
-        <h1>Parts of Speech</h1>
+        <h1>Parts of Speech Quiz</h1>
     </header>
     <div class="container">
-        <button onclick="playSound('correct.mp3')">Play Correct Sound</button>
-        <button onclick="playSound('wrong.mp3')">Play Wrong Sound</button>
         <button id="start-button">Start Quiz</button>
         <div id="quiz" style="display: none;">
             <div class="question-box">
                 <div id="question" class="question"></div>
                 <div id="options" class="options"></div>
             </div>
+            <div id="result"></div>
         </div>
     </div>
 
@@ -126,6 +129,7 @@
         const questionElement = document.getElementById('question');
         const optionsElement = document.getElementById('options');
         const startButton = document.getElementById('start-button');
+        const resultElement = document.getElementById('result');
 
         startButton.addEventListener('click', () => {
             startButton.style.display = 'none';
@@ -136,6 +140,7 @@
         function showQuestion() {
             questionElement.innerHTML = `${currentQuestionIndex + 1}. ${questions[currentQuestionIndex].question}`;
             optionsElement.innerHTML = '';
+            resultElement.innerHTML = '';
 
             questions[currentQuestionIndex].options.forEach((option, index) => {
                 const button = document.createElement('button');
@@ -150,22 +155,28 @@
 
             if (selected === correctAnswer) {
                 button.classList.add('correct');
-                setTimeout(() => {
-                    currentQuestionIndex++;
-                    if (currentQuestionIndex < questions.length) {
-                        showQuestion();
-                    } else {
-                        quizContainer.innerHTML = '<p>Quiz Completed! Well done!</p>';
-                    }
-                }, 1000);
+                playSound('correct.mp3');
+                resultElement.innerHTML = "Correct!";
             } else {
                 button.classList.add('wrong');
+                playSound('wrong.mp3');
+                resultElement.innerHTML = "Wrong! The correct answer was: " + questions[currentQuestionIndex].options[correctAnswer];
             }
+
+            setTimeout(() => {
+                currentQuestionIndex++;
+                if (currentQuestionIndex < questions.length) {
+                    showQuestion();
+                } else {
+                    quizContainer.innerHTML = '<p>Quiz Completed! Well done!</p>';
+                }
+            }, 2000);
         }
 
-             function playSound(file) {
-         const sound = new Audio(file);
-         sound.play().catch(err => console.error(`Error playing sound: ${err}`));  }
+        function playSound(file) {
+            const sound = new Audio(file);
+            sound.play().catch(err => console.error(`Error playing sound: ${err}`));
+        }
     </script>
 </body>
 </html>
