--- a/index.html
+++ b/index.html
@@ -107,20 +107,20 @@
             { question: "The baby crawled <u>under</u> the bed.", options: ["Preposition", "Conjunction", "Adverb", "Adjective"], answer: 0 },
             { question: "She <u>quickly</u> packed her bag and left.", options: ["Noun", "Adjective", "Verb", "Adverb"], answer: 3 },
             { question: "This is a <u>depressing</u> time to be living in London as people are arguing over the election.", options: ["Interjection", "Adjective", "Adverb", "Noun"], answer: 1 },
-            { question: "Take your first left then go <u>over</u> the bridge.", options: ["Noun", "Preposition", "Verb", "Interjection"], answer: 1 },
+            { question: "<u>Take</u> your first left then go over the bridge.", options: ["Noun", "Preposition", "Verb", "Interjection"], answer: 2 },
             { question: "There is a party next week <u>though</u> I don’t think I can go.", options: ["Preposition", "Conjunction", "Adverb", "Noun"], answer: 1 },
-            { question: "He thinks we will arrive at <u>roughly</u> 5pm.", options: ["Pronoun", "Preposition", "Conjunction", "Adverb"], answer: 3 },
-            { question: "The music is <u>very</u> loud.", options: ["Adjective", "Interjection", "Preposition", "Adverb"], answer: 3 },
-            { question: "He goes to Spain often not only for the sun but also for the <u>food</u>.", options: ["Conjunction", "Adverb", "Preposition", "Noun"], answer: 3 },
-            { question: "Because the floor had just been mopped, Allan and Elaine slipped and fell as they ran to the meeting.", options: ["Preposition", "Conjunction", "Noun", "Adjective"], answer: 1 },
-            { question: "I visited the <u>Golden Temple</u> in Amritsar, India in the vacation.", options: ["Noun", "Interjection", "Pronoun", "Conjunction"], answer: 0 },
-            { question: "Her expensive brown English antique new <u>watch</u> stopped working.", options: ["Conjunction", "Adverb", "Pronoun", "Noun"], answer: 3 },
+            { question: "He thinks <u>we</u> will arrive at roughly 5pm.", options: ["Pronoun", "Preposition", "Conjunction", "Adverb"], answer: 0 },
+            { question: "The <u>music</u> is very loud.", options: ["Adjective", "Interjection", "Preposition", "Noun"], answer: 3 },
+            { question: "He goes to Spain often <u>not only but also</u> for the food.", options: ["Conjunction", "Adverb", "Preposition", "Noun"], answer: 0 },
+            { question: "<u>Because</u> the floor had just been mopped, Allan and Elaine slipped and fell as they ran to the meeting.", options: ["Preposition", "Conjunction", "Noun", "Adjective"], answer: 1 },
+            { question: "I visited the Golden Temple in <u>India</u> in the vacation.", options: ["Noun", "Interjection", "Pronoun", "Conjunction"], answer: 0 },
+            { question: "<u>Her</u> expensive brown English antique new watch stopped working.", options: ["Conjunction", "Adverb", "Pronoun", "Noun"], answer: 2 },
             { question: "My mother is <u>cooking</u> dinner for us.", options: ["Preposition", "Verb", "Noun", "Adverb"], answer: 1 },
             { question: "<u>Oh</u>, I didn’t see you there!", options: ["Preposition", "Conjunction", "Noun", "Interjection"], answer: 3 },
             { question: "He's the <u>richest</u> man in the world.", options: ["Adjective", "Verb", "Conjunction", "Preposition"], answer: 0 },
             { question: "<u>Although</u> we were tired, we stayed up late.", options: ["Preposition", "Conjunction", "Noun", "Interjection"], answer: 1 },
             { question: "<u>Poverty</u> is a global problem.", options: ["Adjective", "Interjection", "Preposition", "Noun"], answer: 3 },
-            { question: "He has many <u>influential</u> friends.", options: ["Conjunction", "Verb", "Preposition", "Noun"], answer: 3 },
+            { question: "He has many influential <u>friends</u>.", options: ["Conjunction", "Verb", "Preposition", "Noun"], answer: 3 },
             { question: "Hari is the most <u>intelligent</u> boy in the class.", options: ["Pronoun", "Preposition", "Conjunction", "Adjective"], answer: 3 }
         ];
 
